# AdventOfCode2020

./: Day template.ipynb  pyproject.toml
01-report-repair/: 01 Report Repair.ipynb
02-password-philosophy/: 02 Password philosophy.ipynb
03-toboggan-trajectory/: 03 Toboggan Trajectory.ipynb
04-passport-processing/: 04 Passport processing.ipynb
05-binary-boarding/: 05 Binary Boarding.ipynb
06-custom-customs/: 06 Custom Customs.ipynb
07-handy-haversacks/: 07 Handy Haversacks.ipynb
08-handheld-halting/: 08 Handheld Halting.ipynb
09-encoding-error/: 09 Encoding Error.ipynb
10-adapter-array/: 10 Adapter Array.ipynb
