[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
scipy = "^1.5.4"
matplotlib = "^3.3.3"
pandas = "^1.1.4"
seaborn = "^0.11.0"
sklearn = "^0.0"
tqdm = "^4.54.0"
advent-of-code-data = "^0.8.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
